# Windows-FFMPEG-SDL2-mmsystem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPcmSpeaker.cpp  CPcmSpeaker.h  Makefile  PCM.cpp  PCM.h  README.md  cmake_install.cmake  ffmpeg.cbp  main.cpp
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
